# blockchain_market_spark_analysis-group-9-

./: .gitignore  README.md  docker-compose.spark.yml  main.py  pyproject.toml
01_spark_blockchain_pipeline/: 01_get_aws_parquet_files.py  02_get_daily_summary.py  02_get_daily_summary_test.py  02_get_hour_summary.py  04_build_aws_btc_featuresEnhance.py  04_get_binance_price.py  05_ml.py  README.md  main_run.py  main_run_enhanced.py  requirements.txt
01_spark_blockchain_pipeline/01_data_sources/: load_aws_btc_transactions.py  load_local_blocks_csv.py
01_spark_blockchain_pipeline/02_processing_etl/: 02_get_daily_summary.py  02_get_daily_summary_test02.py  build_aws_btc_features.py  build_aws_btc_featuresEnhance.py  build_daily_summary_from_aws.py  build_daily_summary_from_local.py  build_hourly_summary_direct_from_aws.py
01_spark_blockchain_pipeline/03_data_integration/: blockchain_metrics_to_postgres.py  fuse_blockchain_market_postgres.py  upload_hourly_realized_volatility_predictions.py  upload_hourly_volatility_predictions.py
01_spark_blockchain_pipeline/04_ml_and_analytics/: 04_analysis_daily_data.py  04_build_aws_btc_featuresEnhance.py  build_hourly_ml_dataset.py  train_btc_model.py  train_hourly_classifiers.py  train_hourly_realized_volatility_regressors.py
02_spark_market_data_pipeline/: .gitignore  main_run_02.py
03_postgres_database/: ini_table.sql  tableForGrafana.sql
04_grafana_dashboards/: 5003project_legacy_blockchain_market_mainDashboard-1778416191618.json  BTC Spark ML Volatility Dashboard-1778416202671.json  blockchain&marketgrafana.json
(+25 files in other folders)
